[package]
name = "guild_pawhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo", "env", "unstable-v5"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive", "unstable"] }
serenity = "0.12.0"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
